--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .banner-header {
-  background-color: silver;
+  background-color: #0c6f3c;
+  color: #fff;
   text-align: center;
   padding: 0.25em;
 }
