--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,7 @@
 html {
   width: 100%;
   margin: auto;
+  background-color: #b6c7ac;
 }
 
 main {
@@ -9,4 +10,22 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 5px;
+  align-items: stretch;
+  padding: 20px;
+}
+
+button {
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 16px;
+  background: #5a9679;
+  padding: 5px 20px;
+  border: solid #2a4035 2px;
+  text-decoration: none;
+}
+
+button:hover {
+  background: #ffffff;
+  text-decoration: none;
+  color: #5a9679;
 }
