--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: space-between;
     text-decoration: line-through;
+    line-height: 32px;
 }
 
 .not-bought {
