--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,6 +14,15 @@ main {
   padding: 20px;
 }
 
+.buttons-section {
+  width: 35%;
+  margin: auto;
+  display: flex;
+  gap: 25px;
+  align-items: stretch;
+  padding: 20px;
+}
+
 button {
   font-family: Arial;
   color: #ffffff;
